--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <button id="button">SET GRID</button>
+    <div id="userChoiceDisplay"></div>
     <div id="container">
         
     </div>
